--- a/pyleus_logging.conf
+++ b/pyleus_logging.conf
@@ -1,12 +1,12 @@
 [loggers]
-keys=root,stastics_logging
+keys=root,stastics_logger
 
 [logger_root]
 level=INFO
 handlers=timedRotatingFileHandler
 
-[logger_stastics_logging]
-qualname=stastics_logging
+[logger_stastics_logger]
+qualname=stastics_logger
 handlers=
 
 [handlers]
@@ -16,7 +16,7 @@ keys=timedRotatingFileHandler
 class=logging.handlers.TimedRotatingFileHandler
 level=INFO
 formatter=defaultFormatter
-args=('/tmp/pyleus_stastics_logging.log', 'D')
+args=('/tmp/pyleus_stastics_logger.log', 'D')
 
 [formatters]
 keys=defaultFormatter
